# kazgirls

./: .dockerignore  .gitignore  .gitlab-ci.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
api/: Makefile  README.md  alembic.ini  app.py  app_logging.py  app_scheduled_job.py  example.env  job_worker.py  pyproject.toml  ruff.toml  run.py  test.py  tox.ini
api/.docker/: .dockerignore  Dockerfile  example.docker.env
api/admin/: __init__.py  bases.py  custom_pages.py  streamers.py  user.py  viewers.py
api/dependencies/: __init__.py  auth.py  db.py  httpx.py  redis.py  sockets.py  tasks.py  templates.py
api/endpoints/: __init__.py  _responses.py  _tags.py  auth.py  lobby.py  messages.py  streamers.py  viewers.py
api/exceptions/: auth.py  bases.py  db.py  streamers.py
api/logic/: auth.py  lobby.py  messages.py  streamers.py  viewers.py
api/migrations/: env.py
api/models/: __init__.py  bases.py  messages.py  rooms.py  streamers.py  user.py  viewers.py
api/repository/: bases.py  dto.py  jwt_token.py  messages.py  streamers.py  types.py  user.py  viewers.py
api/schemas/: _validators.py  auth.py  bases.py  files.py  jobs.py  lobby.py  messages.py  response.py  streamers.py  user.py
api/services/: auth.py  bases.py  jwt.py  user.py
api/settings/: conf.py  db.py
api/sockets/: __init__.py  lobby.py  streamers.py
api/tasks/: streamers.py  viewers.py
api/templates/admin/: index.html  (+3 more)
api/tests/: conftest.py  custom_faker.py  fake_repositories.py
api/utils/: auth.py  constants.py  handlers.py  helpers.py  libs.py  middleware.py
(+100 files in other folders)
