[project]
name = "kazgirls"
version = "0.1.0"
description = "kazgirls"
readme = "README.md"
requires-python = "==3.13.7"
dependencies = [
    "aiobotocore~=2.24",
    "aiocache~=0.12",
    "alembic~=1.12",
    "alembic-postgresql-enum~=1.0",
    "arq~=0.25",
    "fakeredis[lua]",
    "asyncpg~=0.30",
    "bcrypt~=4.3",
    "clickhouse-connect~=0.8",
    "fastapi~=0.111",
    "greenlet~=3.1",
    "httpx[http2]~=0.28",
    "itsdangerous~=2.2",
    "loguru~=0.7",
    "openpyxl~=3.1",
    "phonenumbers~=9.0",
    "psycopg2-binary~=2.9",
    "pydantic[email]~=2.11",
    "pydantic-settings~=2.10",
    "pyjwt~=2.10",
    "python-dotenv~=1.0",
    "redis~=6.4",
    "sentry-sdk[fastapi]~=2.17",
    "sqladmin~=0.20",
    "sqlalchemy~=2.0",
    "sqlalchemy-utils~=0.41",
    "types-aiobotocore-s3~=2.24",
    "uuid7~=0.1",
    "uvicorn~=0.30.1",
    "yarl~=1.19",
    "aiofiles~=24.1",
    "orjson~=3.11",
    "apscheduler~=3.11",
    "scalar-fastapi~=1.3",
    "python-socketio[asyncio-client]>=5.14.1",
]

[dependency-groups]
local = [
    { include-group = "dev" },
]
dev = [
    "freezegun>=1.5.5",
    "polyfactory>=2.20.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.7",
]

[tool.uv]
default-groups = []
